--- a/static/style.css
+++ b/static/style.css
@@ -1,83 +1,75 @@
 body {
-    background: black;
-    font-family: 'Verdana', sans-serif;
-    font-size: 13px;
-    color: white;
+    background: #0fbbd9 url(background.jpeg) no-repeat fixed;
+    font-family: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+    font-size: 16px;
     margin: 0;
     padding: 0;
 }
 
 div.page {
-    background: black url(header.png) no-repeat center 0;
-    margin: 0;
-    padding: 2px;
+    position: relative;
+    background: white;
+    background: rgba(255, 255, 255, 0.8);
+    margin: 0 auto;
+    padding: 30px;
     min-height: 460px;
+    width: 780px;
+}
+
+a {
+    color: #15BDDA;
 }
 
 img {
     border: none;
 }
 
-a {
-    color: #95bed5;
-}
-
-a:hover {
-    color: #ffb36e;
-}
-
 div.page div.header h1 {
-    display: none;
-    margin: 0;
+    margin: 10px 0 25px 0;
     padding: 0;
+    color: #15BDDA;
 }
 
 ul.navigation {
+    clear: both;
+    float: right;
     list-style: none;
-    width: 770px;
-    margin: 0 auto 20px auto;
+    margin: 0;
     padding: 0;
     text-align: right;
+    border-bottom: 2px solid #15BDDA;
+    background: white;
+    padding: 3px 7px;
 }
 
 ul.navigation li {
+    display: inline;
     padding: 0;
     margin: 0;
 }
 
-ul.navigation li.active a {
-    background: url(pattern.png);
-    color: #ffb36e;
-}
-
 ul.navigation li a {
-    color: #95bed5;
     font-weight: bold;
     padding: 0 2px;
     text-decoration: none;
+    color: #666;
 }
 
-ul.navigation li a:hover {
-    color: white;
-    border-bottom: white;
+ul.navigation li.active a {
+    color: #15BDDA;
 }
 
 div.contents {
-    width: 770px;
-    margin: 25px auto;
+    clear: both;
 }
 
 div.contents h2, div.contents h3 {
     font-family: 'PT Sans', 'Arial', sans-serif;
-    font-size: 24px;
     font-weight: normal;
     margin: 0;
-    color: #cbd5df;
-    text-shadow: #192a37 0 0 1px;
 }
 
 div.contents h3 {
-    font-size: 18px;
     margin: 10px 0 0 0;
     padding: 0;
 }
@@ -88,38 +80,32 @@ div.contents p {
 }
 
 div.bodywrapper {
-    margin: 0 -20px;
-    padding: 15px 20px 30px 20px;
     min-height: 200px;
-    background: url(pattern.png);
-    border-radius: 10px;
-    -moz-border-radius: 10px;
-    -webkit-border-radius: 10px;
-    border: 1px solid #1e232f;
 }
 
 div.feed-box {
     text-align: right;
-    font-size: 11px;
 }
 
 /* :::: STEAM LOGIN :::: */
 p.steam-login {
-    width: 770px;
-    margin: 35px auto 0 auto;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    text-align: right;
+    margin: 0;
     padding: 0;
-    line-height: 1;
+    font-size: 90%;
     height: 30px;
     text-align: right;
-    font-size: 11px;
 }
 
 p.steam-login a.login {
     display: block;
     float: right;
     background: url(steam-signin.png) no-repeat;
-    width: 154px;
     height: 23px;
+    width: 154px;
 }
 
 p.steam-login a.login span {
@@ -129,10 +115,9 @@ p.steam-login a.login span {
 /* :::: FLASHES :::: */
 div.flash {
     padding: 5px 10px;
+    background: black;
+    color: white;
     margin: 0;
-    background: url(pattern.png);
-    border-bottom: 1px solid #3a4f61;
-    color: #95bed5;
 }
 
 /* :::: PAGINATION :::: */
@@ -142,30 +127,26 @@ div.pagination {
 }
 
 div.pagination a, div.pagination strong {
-    background: #192a37;
     padding: 2px 4px;
-    border: 1px solid #3a4f61;
-    border-radius: 2px;
-    -moz-border-radius: 2px;
-    -webkit-border-radius: 2px;
+    border: 1px solid #0fbbd9;
+    background: #b5e9f2;
     text-decoration: none;
+    border-radius: 3px;
 }
 
 div.pagination a:hover, div.pagination strong {
-    background: #3a4f61;
-    color: white;
+    background: white;
 }
 
 div.legal {
     line-height: 1.2;
+    font-size: 12px;
     margin-top: 30px;
-    font-size: 11px;
     text-align: right;
-    color: #192a37;
+    color: #888;
 }
 
 div.legal a {
-    color: #192a37;
 }
 
 /* :::: TIMELINE :::: */
@@ -176,25 +157,14 @@ ul.news {
 }
 
 ul.news li.item {
-    background: url(pattern-bright.png);
     line-height: 1.5;
     margin: 15px auto;
-    padding: 4px 10px;
-    border-radius: 10px;
-    -moz-border-radius: 10px;
-    -webkit-border-radius: 10px;
-    border: 1px solid #3a4f61;
+    padding: 6px 10px;
+    background: white;
 }
 
 ul.news li.item-twitter {
-    background: url(pattern-tweet.png);
     width: 60%;
-}
-
-ul.news li.item div.developer {
-    color: #5c7e93;
-    font-size: 11px;
-    opacity: 0.6;
 }
 
 ul.news li.item div.developer a.developer {
@@ -239,19 +209,13 @@ ul.news li.item-forums blockquote {
 /* :::: OTHER BOXES :::: */
 
 dl.developer-box, div.box {
-    background: url(pattern-box.png);
     line-height: 1.5;
     margin: 15px auto;
     padding: 7px 15px;
-    border-radius: 10px;
-    -moz-border-radius: 10px;
-    -webkit-border-radius: 10px;
-    border: 1px solid #3a4f61;
 }
 
 dl dt {
     font-weight: bold;
-    font-size: 11px;
     margin: 3px 0;
     padding: 0;
 }
@@ -264,10 +228,7 @@ dl dd {
 /* :::: INPUTS :::: */
 input, textarea {
     font-family: 'Verdana', sans-serif;
-    font-size: 13px;
-    background: url(pattern.png);
     border: 1px solid #3a4f61;
-    color: white;
     padding: 2px;
 }
 
