--- a/templates/about.html
+++ b/templates/about.html
@@ -5,14 +5,14 @@
   <div class=box>
     <h3>What's this?</h3>
     <p>
-      This website aggregates the official battlefield 3 forums and the twitter
+      This website aggregates the official Brink forums and the known twitter
       accounts of developers for news from the sources.  It updates in 15
-      minute intervals and aggregates most developer accounts.  In case you think
-      I am missing one, <a href=mailto:armin.ronacher@active-4.com>shoot me a line</a>
-      and I will add him or her.
+      minute intervals and aggregates most developer accounts.  In case you
+      think I am missing one, <a href=mailto:armin.ronacher@active-4.com>shoot
+      me a line</a> and I will add him or her.
     <h3 id=contact>Who is behind this?</h3>
     <p>
-      <a href=http://lucumr.pocoo.org/>Armin Ronacher</a>.  You can contact me
+      <a href=http://immersedcode.org/>Armin Ronacher</a>.  You can contact me
       <a href=mailto:armin.ronacher@active-4.com>via mail</a> or
       <a href=http://twitter.com/mitsuhiko>Twitter</a>.
     <h3>Why does this website exist?</h3>
@@ -24,21 +24,18 @@
     <h3>There is too much information</h3>
     <p>
       Indeed.  If you have some ideas how I could filter out useless tweets and
-      stuff, let me know.  I am already filtering out replies to other people
-      from the tweets which reduced the amount of information here a lot, but it's
-      still too much.  I personally mostly use it to track the forum posts which
-      are otherwise quite hard to find.
+      stuff, let me know.
     <h3 id=missing-dev>I am missing on this list / X is missing on this list</h3>
     <p>
-      This website aggregates developers working on BF3 only.  If you are
-      missing or someone you know is missing, please let me know and provide
-      this information: real name, twitter account, forums account, optionally
-      a short description.  If that developer does not have a twitter or forum
+      This website aggregates developers working on Brink.  If you are missing
+      or someone you know is missing, please let me know and provide this
+      information: real name, twitter account, forums account, optionally a
+      short description.  If that developer does not have a twitter or forum
       account, one is enough obviously.
     <h3>Where is the Code?</h3>
     <p>
       Good that you're asking.  If you want to have a look at it, you can find the
-      code on github: <a href=http://github.com/mitsuhiko/bf3-aggregator>mitsuhiko/bf3-aggregator</a>.
+      code on github: <a href=http://github.com/mitsuhiko/brink-aggregator>mitsuhiko/brink-aggregator</a>.
     <h3>Can I get that data?</h3>
     <p>
       Send an HTTP request with <code>Accept: application/json</code> to any of the
@@ -50,14 +47,10 @@
     <p>
       If you are logged in you can favorite items.  This has the advantage that if
       enough users do that I can filter out more interesting items.  You will also be
-      able to find again items you found interesting in the past.
-    <p>
-      I would have linked to use the EA account system for that, but unfortunately
-      they don't provide a service like steam which allows me to securely use the
-      authentication system here.  If you sign in with steam on this website no
-      account information is transmitted to this website besides a unique number
-      that keeps you apart from others and your current username (as well as real
-      name if you have specified it).
+      able to find again items you found interesting in the past.  If you sign
+      in with steam on this website no account information is transmitted to
+      this website besides a unique number that keeps you apart from others and
+      your current username (as well as real name if you have specified it).
     <p>
       If you don't have a steam account yet, you can create one for free
       <a href=https://store.steampowered.com/join/>on the steam website</a> and
